# torf-gui

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.md  README.rst  gen_ui.py  pyproject.toml  requirements-dev.txt  requirements.txt  screenshot.ps1  screenshot.py  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  release-pypi.yml  release.yml  screenshots.yml  test.yml
tests/: gui.py
torfGUI/: __init__.py  gui.py  mainwindow.ui  ui_about.py  ui_mainwindow.py
torf_gui/: __init__.py  about.ui  gui.py  mainwindow.ui  mediainfolocation.ui  ui_about.py  ui_mainwindow.py  ui_mediainfolocation.py
