[project]
name = "torf-gui"
version = "0.4.2"
description = "A GUI for torf"
requires-python = ">=3.7,<3.13"
readme = "README.md"
authors = [{ name = "Oliver Sayers", email = "talk@savagecore.uk" }]
keywords = ["bittorrent", "torrent"]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "torf>=4.2.4",
    "humanfriendly>=10.0",
    "PyQt5>=5.15.9",
    "pyqtdarktheme>=2.1.0",
]

[project.scripts]
"torf-gui" = "torf_gui.gui:main"

[tool.ruff]
line-length = 79
exclude = [
    ".pytest_cache",
    ".github",
    ".vscode",
    ".git",
    "build",
    "dist",
    "venv",
    "torf_gui.egg-info",
]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "B",
    "I",
    "C90",
    "N801",
    "N999",
    "PT",
    "UP",
    "ERA001",
    "RUF100",
]

[tool.ruff.lint.per-file-ignores]
"./torf_gui/__init__.py" = ["F401"]
"./torf_gui/ui_*.py" = ["E501", "N801"]
